--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Buy
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding color = "twitter">
+
 
 </ion-content>
