Changed the Buy Page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,7 +6,28 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding color = "twitter">
+<ion-content padding>
+  <ion-list>
 
+    <ion-item>
+      <ion-label floating>Search by Title</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Search by Class</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Search by ISBN</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+  </ion-list>
+
+  <div padding>
+  <button ion-button color="dark" block>Search</button>
+</div>
 
 </ion-content>
