--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,7 +2,7 @@
 
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Buy" tabIcon="ios-cash-outline"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Sell" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Sell" tabIcon="ios-barcode-outline"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Profile" tabIcon="contacts"></ion-tab>
 
 </ion-tabs>
