--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -11,23 +11,23 @@
 
     <ion-item>
       <ion-label floating>Search by Title</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)] = "title"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Search by Class</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" [(ngModel)] = "class"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Search by ISBN</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="number" [(ngModel)] = "isbn"></ion-input>
     </ion-item>
 
   </ion-list>
 
   <div padding>
-  <button ion-button color="dark" block>Search</button>
+  <button ion-button type = "submit" color="dark" block>Search</button>
 </div>
 
 </ion-content>
