--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,22 +16,22 @@
 
         <ion-item>
           <ion-label floating>Username:</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input type="text" [(ngModel)] = "username"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label floating>Password:</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" [(ngModel)] = "password"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label floating>Contact email:</ion-label>
-          <ion-input type="text"></ion-input>
+          <ion-input type="text" [(ngModel)] = "email"></ion-input>
         </ion-item>
   </ion-list>
 
   <div padding>
-  <button ion-button color="dark" block>Edit Profile</button>
+  <button ion-button type = "submit" color="dark" block>Edit Profile</button>
 </div>
 
 </ion-content>
