Broken Storage Commit

--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -14,6 +14,26 @@
     <ion-input type="name"></ion-input>
   </ion-item>
 
-  <button ion-button round (click)="doAlert()">Create Account</button>
+  <ion-item >
+    <ion-label stacked>Class</ion-label>
+    <ion-input type="class"></ion-input>
+  </ion-item>
+
+  <ion-item >
+    <ion-label stacked>Price</ion-label>
+    <ion-input type="price"></ion-input>
+  </ion-item>
+
+  <ion-item >
+    <ion-label stacked>Contact</ion-label>
+    <ion-input type="contact"></ion-input>
+  </ion-item>
+
+  <ion-item >
+    <ion-label stacked>Description</ion-label>
+    <ion-input type="description"></ion-input>
+  </ion-item>
+
+  <button ion-button round (click)="setData()">Create Posting</button>
 
 </ion-content>
