Pushing the new labels on Sell.html

--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -10,27 +10,27 @@
 <ion-content padding>
 
 <ion-item >
-    <ion-label stacked>Name</ion-label>
+    <ion-label floating>Name</ion-label>
     <ion-input type="name"></ion-input>
   </ion-item>
 
   <ion-item >
-    <ion-label stacked>Class</ion-label>
+    <ion-label floating>Class</ion-label>
     <ion-input type="class"></ion-input>
   </ion-item>
 
   <ion-item >
-    <ion-label stacked>Price</ion-label>
+    <ion-label floating>Price</ion-label>
     <ion-input type="price"></ion-input>
   </ion-item>
 
   <ion-item >
-    <ion-label stacked>Contact</ion-label>
-    <ion-input type="contact"></ion-input>
+    <ion-label floating>Contact</ion-label>
+    <ion-input type="email"></ion-input>
   </ion-item>
 
   <ion-item >
-    <ion-label stacked>Description</ion-label>
+    <ion-label floating>Description</ion-label>
     <ion-input type="description"></ion-input>
   </ion-item>
 
