Changed the style

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,37 +1,37 @@
-<ion-header>
-  <ion-navbar>
+<ion-header >
+  <ion-navbar >
     <ion-title>
       Profile Settings
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class = "butterMilk">
   <ion-list>
     <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
+    <ion-item  class = "butterMilk">
       <ion-icon name="ios-school" item-left></ion-icon>
       @olemiss
     </ion-item>
 
-        <ion-item>
+        <ion-item class = "butterMilk">
           <ion-label floating>Username:</ion-label>
           <ion-input type="text" [(ngModel)] = "username"></ion-input>
         </ion-item>
 
-        <ion-item>
+        <ion-item class = "butterMilk">
           <ion-label floating>Password:</ion-label>
           <ion-input type="password" [(ngModel)] = "password"></ion-input>
         </ion-item>
 
-        <ion-item>
+        <ion-item class = "butterMilk">
           <ion-label floating>Contact email:</ion-label>
           <ion-input type="text" [(ngModel)] = "email"></ion-input>
         </ion-item>
   </ion-list>
 
   <div padding>
-  <button ion-button type = "submit" color="dark" block>Edit Profile</button>
+  <button ion-button class = "stone" type = "submit" color="dark" block>Edit Profile</button>
 </div>
 
 </ion-content>
