--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -1,39 +1,40 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>sell</ion-title>
+    <ion-title>Sell</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class = "butterMilk">
 
-<ion-item >
+<ion-item class = "butterMilk">
     <ion-label floating>Name</ion-label>
     <ion-input type="name"></ion-input>
   </ion-item>
 
-  <ion-item >
+  <ion-item class = "butterMilk">
     <ion-label floating>Class</ion-label>
     <ion-input type="class"></ion-input>
   </ion-item>
 
-  <ion-item >
+  <ion-item class = "butterMilk">
     <ion-label floating>Price</ion-label>
     <ion-input type="price"></ion-input>
   </ion-item>
 
-  <ion-item >
+  <ion-item class = "butterMilk">
     <ion-label floating>Contact</ion-label>
     <ion-input type="email"></ion-input>
   </ion-item>
 
-  <ion-item >
+  <ion-item class = "butterMilk">
     <ion-label floating>Description</ion-label>
     <ion-input type="description"></ion-input>
   </ion-item>
 
-  <button ion-button round (click)="setData()">Create Posting</button>
+  <button ion-button class = "stone" type = "submit" (click)="setData()">Create Posting</button>
+
 
 </ion-content>
