--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,20 +6,20 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list>
+<ion-content padding class = "butterMilk">
+  <ion-list class = "butterMilk">
 
-    <ion-item>
+    <ion-item class = "butterMilk">
       <ion-label floating>Search by Title</ion-label>
       <ion-input type="text" [(ngModel)] = "title"></ion-input>
     </ion-item>
 
-    <ion-item>
+    <ion-item class = "butterMilk">
       <ion-label floating>Search by Class</ion-label>
       <ion-input type="text" [(ngModel)] = "class"></ion-input>
     </ion-item>
 
-    <ion-item>
+    <ion-item class = "butterMilk">
       <ion-label floating>Search by ISBN</ion-label>
       <ion-input type="number" [(ngModel)] = "isbn"></ion-input>
     </ion-item>
@@ -27,7 +27,7 @@
   </ion-list>
 
   <div padding>
-  <button ion-button type = "submit" color="dark" block>Search</button>
+  <button ion-button type = "submit" class = "stone" color="dark" block>Search</button>
 </div>
 
 </ion-content>
