--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,9 +4,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Anobium</h2>
-  <p>
+<ion-content padding class = "butterMilk">
+  <h2 text-center>Anobium</h2>
+  <p text-center>
     Anobium is an app created to give students a safe and easy way to sell or rent books from other students at any university.
   </p>
 </ion-content>
