Midnight Ian Commit

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <ion-header >
-  <ion-navbar >
+  <ion-navbar color = "greenish">
     <ion-title>
       Profile Settings
     </ion-title>
@@ -8,7 +8,7 @@
 
 <ion-content class = "butterMilk">
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header class = "greenish">Follow us on Twitter</ion-list-header>
     <ion-item  class = "butterMilk">
       <ion-icon name="ios-school" item-left></ion-icon>
       @olemiss
