Midnight Ian Commit

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,8 +5,10 @@
 </ion-header>
 
 <ion-content padding class = "butterMilk">
-  <h2 text-center>Anobium</h2>
+  <h5>Anobium</h5>
+  <ion-card class = "card">
   <p text-center>
     Anobium is an app created to give students a safe and easy way to sell or rent books from other students at any university.
   </p>
+  </ion-card>
 </ion-content>
