--- a/src/pages/sell/sell.html
+++ b/src/pages/sell/sell.html
@@ -32,12 +32,18 @@
     <ion-input id = "desc" type="text" name = "description" [(ngModel)] = "bookCred.desc"></ion-input>
   </ion-item>
 
-  <p *ngFor="let item of items">
-		{{item}}
+  <p *ngFor="let book of books">
+		{{book}}
 	</p>
 
   <div padding>
-  <button ion-button class = "stone"  (click)="save(bookCred.name)" block>Create Posting</button>
+  <button ion-button class = "stone"  (click)="save(bookCred)" block>Create Posting</button>
+  <ion-content class="has-header">
+  <ion-list *ngFor="let book of books" no-lines>
+    <ion-item>Title: {{ book.name }}</ion-item>
+    <ion-item>Class: {{ book.class }}</ion-item>
+  </ion-list>
+</ion-content>
 </div>
 
 
