Midnight Ian Commit

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -27,7 +27,7 @@
   </ion-list>
 
   <div padding>
-  <button ion-button type = "submit" class = "stone" color="dark" (click)="getData(bookCred)" block>Search</button>
+  <button ion-button type = "submit" class = "stone" color="dark" (click)="showPrompt()" block>Search</button>
 </div>
 
 </ion-content>
