Midnight Ian Commit

--- a/src/pages/results/results.html
+++ b/src/pages/results/results.html
@@ -15,4 +15,42 @@
 
 <ion-content padding>
 
+	<ion-card class = "card">
+  		<ion-card-header>
+    		Computer Science
+  		</ion-card-header>
+  		<ion-card-content>
+    		Name: Java for Beginners
+    		Class: CSCI 111
+    		Price: $45
+    		Email: Emailmeforbook@gmail.com
+    		Description: Book is in good condition, took the class last semseter.
+  		</ion-card-content>
+	</ion-card>
+
+	<ion-card class = "card">
+  		<ion-card-header>
+    		Computer Science
+  		</ion-card-header>
+  		<ion-card-content>
+    		Name: Mathematical Modeling and Computer Simulation
+    		Class: CSCI 311
+    		Price: $45
+    		Email: Emailmeforbook@gmail.com
+    		Description: Book is in good condition, took the class last semseter.
+  		</ion-card-content>
+	</ion-card>
+
+	<ion-card class = "card">
+  		<ion-card-header>
+    		English
+  		</ion-card-header>
+  		<ion-card-content>
+    		Name: Composition and Introduction to Literature 1
+    		Class: English 111
+    		Price: $30
+    		Email: Emailhere@gmail.com
+    		Description: Book is in fair condition
+  		</ion-card-content>
+	</ion-card>
 </ion-content>
