Added the logo!

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class = "butterMilk">
-  <h5>Anobium</h5>
+<ion-content padding class = "sec">
+	<ion-img class = "sec" width="200" height="200" align = "center" src="images/FINALANIMBA2.png"></ion-img>
+  <!--<h5>Anobium</h5>-->
   <ion-card class = "card">
   <p text-center>
     Anobium is an app created to give students a safe and easy way to sell or rent books from other students at any university.
